--- a/CarGame/CarGame.vcxproj
+++ b/CarGame/CarGame.vcxproj
@@ -227,6 +227,7 @@
   <ItemGroup>
     <Image Include="Textures\Ground.jpg" />
     <Image Include="Textures\leaf_ground.jpg" />
+    <Image Include="Textures\road.jpg" />
     <Image Include="Textures\skybox.png" />
     <Image Include="Textures\tire.jpg" />
   </ItemGroup>
