--- a/CarGame/CarGame.vcxproj
+++ b/CarGame/CarGame.vcxproj
@@ -225,6 +225,7 @@
     <None Include="Structures.hlsli" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="Textures\car_light.jpg" />
     <Image Include="Textures\fat_tree.png" />
     <Image Include="Textures\Ground.jpg" />
     <Image Include="Textures\leaf_ground.jpg" />
