--- a/CarGame/CarGame.vcxproj.filters
+++ b/CarGame/CarGame.vcxproj.filters
@@ -162,5 +162,8 @@
     <Image Include="Textures\fat_tree.png">
       <Filter>Textures</Filter>
     </Image>
+    <Image Include="Textures\car_light.jpg">
+      <Filter>Textures</Filter>
+    </Image>
   </ItemGroup>
 </Project>
